--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,15 @@
     max-height: 100%;
 }
 
+.btn-tile {
+    height: 100%;
+    width: 100%;
+}
+
+.btn-tile {
+    min-height: auto;
+}
+
 html,
 body {
     padding: 0;
