--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.grid-item::before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+}
+
 .popover {
     @apply invisible absolute;
 }
@@ -39,4 +45,27 @@ a {
 
 * {
     box-sizing: border-box;
+}
+
+[style*='--aspect-ratio'] > :first-child {
+    width: 100%;
+}
+[style*='--aspect-ratio'] > div {
+    height: auto;
+}
+@supports (--custom: property) {
+    [style*='--aspect-ratio'] {
+        position: relative;
+    }
+    [style*='--aspect-ratio']::before {
+        content: '';
+        display: block;
+        padding-bottom: calc(100% / (var(--aspect-ratio)));
+    }
+    [style*='--aspect-ratio'] > :first-child {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+    }
 }
